spec/fixtures/errors/choose-with-no-children.jsx
var React = require("react");

module.exports = class extends React.Component {
  render() {
    return (
      <div>
        <Choose />
      </div>
    );
  }
};
